# skcorner

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  start.sh
.github/actions/scalingo-deploy/: action.yml
.github/workflows/: ci.yml
scripts/: generate_big_file.py
src/skillcorner/app/: main.py
src/skillcorner/application/: line_processor.py
src/skillcorner/domain/: entities.py  line_processor_interface.py
src/skillcorner/infrastructure/: executor.py
src/skillcorner/tests/domain/: test_line_processor.py
src/skillcorner/tests/infrastructure/: test_executor.py
