[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ==========================================================
# PROJECT METADATA
# ==========================================================

[project]
name = "skillcorner"
description = "High-performance streaming log processing"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]

dev = [
    "ruff",
    "mypy",
    "pytest",
]

# ==========================================================
# SETUPTOOLS
# ==========================================================

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skillcorner = ["py.typed"]

# ==========================================================
# RUFF
# ==========================================================

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# ==========================================================
# MYPY
# ==========================================================

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
packages = ["skillcorner"]
